Fixing bugs Adding begining of I18n support

--- a/generators/client/templates/flutter/src/main/webapp/lib/account/login/login_screen.dart.ejs
+++ b/generators/client/templates/flutter/src/main/webapp/lib/account/login/login_screen.dart.ejs
@@ -8,7 +8,7 @@ import '../../routes.dart';
 import 'login_bloc.dart';
 
 class LoginScreen extends StatelessWidget {
-  LoginScreen({Key key}) : super(key: QuizzKeys.mainScreen);
+  LoginScreen({Key key}) : super(key: <%= baseName %>Keys.mainScreen);
 
   @override
   Widget build(BuildContext context) {
