--- a/generators/client/templates/flutter/src/main/webapp/lib/account/register/register_screen.dart.ejs
+++ b/generators/client/templates/flutter/src/main/webapp/lib/account/register/register_screen.dart.ejs
@@ -8,7 +8,7 @@ import 'package:flutter/widgets.dart';
 
 
 class RegisterScreen extends StatelessWidget {
-  RegisterScreen() : super(key: QuizzKeys.registerScreen);
+  RegisterScreen() : super(key: <%= baseName %>Keys.registerScreen);
 
   @override
   Widget build(BuildContext context) {
