--- a/generators/client/templates/flutter/src/main/webapp/lib/keys.dart.ejs
+++ b/generators/client/templates/flutter/src/main/webapp/lib/keys.dart.ejs
@@ -1,6 +1,6 @@
 import 'package:flutter/widgets.dart';
 
-class QuizzKeys {
+class <%= baseName %>Keys {
   static const loginScreen = Key('__loginScreen__');
   static const registerScreen = Key('__registerScreen__');
   static const mainScreen = Key('__mainScreen__');
