--- a/generators/client/templates/flutter/src/main/webapp/lib/l10n/intl_fr.arb.ejs
+++ b/generators/client/templates/flutter/src/main/webapp/lib/l10n/intl_fr.arb.ejs
@@ -18,5 +18,5 @@
   "pageRegisterErrorPasswordNotIdentical": "Les mots de passe ne sont pas identiques",
   "pageRegisterSuccessAltImg": "Votre compte a été créé avec succés",
   "pageRegisterSuccess": "Félicitation",
-  "pageRegisterSuccessSub": "Votre compte a été créé avec succés",
+  "pageRegisterSuccessSub": "Votre compte a été créé avec succés"
 }
