--- a/generators/client/templates/flutter/src/main/webapp/lib/main/main_screen.dart.ejs
+++ b/generators/client/templates/flutter/src/main/webapp/lib/main/main_screen.dart.ejs
@@ -7,7 +7,7 @@ import 'package:flutter/material.dart';
 
 
 class MainScreen extends StatelessWidget {
-  MainScreen({Key key}) : super(key: QuizzKeys.mainScreen);
+  MainScreen({Key key}) : super(key: <%= baseName %>Keys.mainScreen);
 
   @override
   Widget build(BuildContext context) {
