--- a/generators/app/templates/flutter/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/lib/l10n/intl_en.arb.ejs
@@ -1,6 +1,6 @@
 {
   "pageLoginBar": "Login",
-  "pageLoginTitle": "Welcome to SortyQuizz",
+  "pageLoginTitle": "Welcome to <%= baseName %>",
   "pageLoginLoginButton": "Sign in",
   "pageLoginRegisterButton": "Register",
   "pageLoginErrorAuthentication": "Problem when authenticate, verify your credential",
@@ -23,5 +23,7 @@
   "pageMainEventButton": "Event",
   "pageMainOpenPackButton": "Open pack",
   "pageMainNumberPackOpen": "Packs",
-  "pageMainMarketButton": "Marketplace"
+  "pageMainMarketButton": "Marketplace",
+  "pageMainTitle": "Main page",
+  "pageMainWelcome": "Welcome to your Jhipster flutter app"
 }
