--- a/generators/app/templates/flutter/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/lib/l10n/intl_fr.arb.ejs
@@ -1,6 +1,6 @@
 {
   "pageLoginBar": "Se connecter",
-  "pageLoginTitle": "Bienvenue sur Jhipster flutter app",
+  "pageLoginTitle": "Bienvenue sur <%= baseName %>",
   "pageLoginLoginButton": "S'identifier",
   "pageLoginRegisterButton": "Créer un compte",
   "pageLoginErrorAuthentication": "Un problème est survenu, veuillez vérifier vos identifiants",
@@ -18,5 +18,7 @@
   "pageRegisterErrorPasswordNotIdentical": "Les mots de passe ne sont pas identiques",
   "pageRegisterSuccessAltImg": "Votre compte a été créé avec succés",
   "pageRegisterSuccess": "Félicitation",
-  "pageRegisterSuccessSub": "Votre compte a été créé avec succés"
+  "pageRegisterSuccessSub": "Votre compte a été créé avec succés",
+  "pageMainTitle": "Page principale",
+  "pageMainWelcome": "Bienvenue sur votre Jhipster flutter app"
 }
