--- a/generators/app/templates/flutter/lib/main/main_screen.dart.ejs
+++ b/generators/app/templates/flutter/lib/main/main_screen.dart.ejs
@@ -2,8 +2,8 @@ import 'package:<%= baseName %>/generated/l10n.dart';
 import 'package:<%= baseName %>/keys.dart';
 import 'package:<%= baseName %>/main/main_bloc.dart';
 import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
-import 'package:flutter/cupertino.dart';
 import 'package:flutter/material.dart';
+import 'package:url_launcher/url_launcher.dart';
 
 
 class MainScreen extends StatelessWidget {
@@ -13,7 +13,47 @@ class MainScreen extends StatelessWidget {
   Widget build(BuildContext context) {
     final mainBloc = BlocProvider.of<MainBloc>(context);
     return Scaffold(
-        backgroundColor: Colors.grey,
-        body: Text('loooooool', style: TextStyle(fontSize: 20)),);
+      appBar: AppBar(
+        automaticallyImplyLeading: false,
+        centerTitle: true,
+        title: Text(S.of(context).pageMainTitle),
+      ),
+      body: Row(
+        mainAxisAlignment: MainAxisAlignment.center,
+        children: <Widget>[
+          Column(
+            mainAxisAlignment: MainAxisAlignment.center,
+            crossAxisAlignment: CrossAxisAlignment.center,
+            children: <Widget>[
+              Text(S.of(context).pageMainWelcome, style: TextStyle(fontSize: 20), textAlign: TextAlign.center,),
+              Padding(padding: EdgeInsets.symmetric(vertical: 10),),
+              linkWidget(context, 'Jhipster Docs', 'https://www.jhipster.tech/'),
+              linkWidget(context, 'Stackoverflow', 'http://stackoverflow.com/tags/jhipster/info'),
+              linkWidget(context, 'Open issues', 'https://github.com/merlinofcha0s/generator-jhipster-flutter/issues?state=open'),
+              linkWidget(context, 'Gitter', 'https://gitter.im/jhipster/generator-jhipster'),
+              linkWidget(context, 'Jhipster twitter', 'https://twitter.com/jhipster')
+            ],
+          ),
+        ],
+      ),
+    );
+  }
+
+  Widget linkWidget(BuildContext context, String text, String url){
+    return RaisedButton(
+        onPressed: () => _launchURL(url),
+        color: Colors.teal,
+        child: Container(
+          child: Text(text, textAlign: TextAlign.center, style: TextStyle(fontSize: 16, color: Colors.white),),
+          width: MediaQuery.of(context).size.width * 0.5,)
+    );
+  }
+
+  _launchURL(String url) async {
+    if (await canLaunch(url)) {
+      await launch(url);
+    } else {
+      throw 'Could not launch $url';
+    }
   }
 }
