--- a/generators/app/templates/flutter/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/pubspec.yaml.ejs
@@ -30,6 +30,7 @@ dependencies:
   dart_json_mapper_flutter: 1.0.0
   rxdart: 0.23.1
   flutter_secure_storage: 3.3.2
+  url_launcher: 5.4.5
 
 dependency_overrides:
   intl: 0.16.1
