--- a/generators/app/templates/flutter/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/lib/l10n/intl_en.arb.ejs
@@ -25,5 +25,8 @@
   "pageMainNumberPackOpen": "Packs",
   "pageMainMarketButton": "Marketplace",
   "pageMainTitle": "Main page",
-  "pageMainWelcome": "Welcome to your Jhipster flutter app"
+  "pageMainWelcome": "Welcome to your Jhipster flutter app",
+  "drawerSettingsTitle": "Settings",
+  "drawerLogoutTitle": "Sign out",
+  "drawerMenuTitle": "Menu"
 }
