--- a/generators/app/templates/flutter/lib/main/main_screen.dart.ejs
+++ b/generators/app/templates/flutter/lib/main/main_screen.dart.ejs
@@ -2,6 +2,8 @@ import 'package:<%= baseName %>/generated/l10n.dart';
 import 'package:<%= baseName %>/keys.dart';
 import 'package:<%= baseName %>/main/main_bloc.dart';
 import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
+import 'package:<%= baseName %>/shared/widgets/drawer/drawer_bloc.dart';
+import 'package:<%= baseName %>/shared/widgets/drawer/drawer_widget.dart';
 import 'package:flutter/material.dart';
 import 'package:url_launcher/url_launcher.dart';
 
@@ -14,28 +16,32 @@ class MainScreen extends StatelessWidget {
     final mainBloc = BlocProvider.of<MainBloc>(context);
     return Scaffold(
       appBar: AppBar(
-        automaticallyImplyLeading: false,
         centerTitle: true,
         title: Text(S.of(context).pageMainTitle),
       ),
-      body: Row(
-        mainAxisAlignment: MainAxisAlignment.center,
-        children: <Widget>[
-          Column(
-            mainAxisAlignment: MainAxisAlignment.center,
-            crossAxisAlignment: CrossAxisAlignment.center,
-            children: <Widget>[
-              Text(S.of(context).pageMainWelcome, style: TextStyle(fontSize: 20), textAlign: TextAlign.center,),
-              Padding(padding: EdgeInsets.symmetric(vertical: 10),),
-              linkWidget(context, 'Jhipster Docs', 'https://www.jhipster.tech/'),
-              linkWidget(context, 'Stackoverflow', 'http://stackoverflow.com/tags/jhipster/info'),
-              linkWidget(context, 'Open issues', 'https://github.com/merlinofcha0s/generator-jhipster-flutter/issues?state=open'),
-              linkWidget(context, 'Gitter', 'https://gitter.im/jhipster/generator-jhipster'),
-              linkWidget(context, 'Jhipster twitter', 'https://twitter.com/jhipster')
-            ],
-          ),
-        ],
-      ),
+      body: body(context),
+      drawer: BlocProvider<<%= baseName %>DrawerBloc>(bloc: <%= baseName %>DrawerBloc() ,child: <%= baseName %>Drawer())
+    );
+  }
+
+  Widget body(BuildContext context){
+    return Row(
+      mainAxisAlignment: MainAxisAlignment.center,
+      children: <Widget>[
+        Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          crossAxisAlignment: CrossAxisAlignment.center,
+          children: <Widget>[
+            Text(S.of(context).pageMainWelcome, style: TextStyle(fontSize: 20), textAlign: TextAlign.center,),
+            Padding(padding: EdgeInsets.symmetric(vertical: 10),),
+            linkWidget(context, 'Jhipster Docs', 'https://www.jhipster.tech/'),
+            linkWidget(context, 'Stackoverflow', 'http://stackoverflow.com/tags/jhipster/info'),
+            linkWidget(context, 'Open issues', 'https://github.com/merlinofcha0s/generator-jhipster-flutter/issues?state=open'),
+            linkWidget(context, 'Gitter', 'https://gitter.im/jhipster/generator-jhipster'),
+            linkWidget(context, 'Jhipster twitter', 'https://twitter.com/jhipster')
+          ],
+        ),
+      ],
     );
   }
 
