--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -19,9 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+<%_ if (enableTranslation) { _%>
   flutter_localizations:
     sdk: flutter
-
+<%_ } _%>
   cupertino_icons: 0.1.3
   provider: 4.0.4
   collection: 1.14.12
@@ -32,9 +33,10 @@ dependencies:
   flutter_secure_storage: 3.3.2
   url_launcher: 5.4.5
 
+<%_ if (enableTranslation) { _%>
 dependency_overrides:
   intl: 0.16.1
-
+<%_ } _%>
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,5 +82,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+<%_ if (enableTranslation) { _%>
 flutter_intl:
   enabled: true
+<%_ } _%>
