--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -11,7 +11,7 @@
   "pageRegisterFormPassword": "Password",
   "pageRegisterFormConfirmPassword": "Confirm password",
   "pageRegisterFormTermsConditions": "I accept the terms of use",
-  "pageRegisterFormTermsConditionsNotChecked": "'Please accept the terms and conditions'",
+  "pageRegisterFormTermsConditionsNotChecked": "Please accept the terms and conditions",
   "pageRegisterFormSubmit": "Sign up",
   "pageRegisterErrorMailExist": "Email already exist",
   "pageRegisterErrorLoginExist": "Login already taken",
