--- a/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
@@ -8,5 +8,5 @@ void main() {
   initializeReflectable();
   configMapper();
   Constants.setEnvironment(Environment.DEV);
-  runApp(<%= baseName %>App());
+  runApp(<%= camelizedUpperFirstBaseName %>App());
 }
