--- a/generators/app/templates/flutter/flutter-app/lib/main_prod.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main_prod.dart.ejs
@@ -8,5 +8,5 @@ void main() {
   initializeReflectable();
   configMapper();
   Constants.setEnvironment(Environment.PROD);
-  runApp(<%= baseName %>App());
+  runApp(<%= camelizedUpperFirstBaseName %>App());
 }
