--- a/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
@@ -1,5 +1,7 @@
 import 'package:<%= baseName %>/account/register/register_bloc.dart';
+<%_ if (enableTranslation) { _%>
 import 'package:<%= baseName %>/generated/l10n.dart';
+<%_ } _%>
 import 'package:<%= baseName %>/keys.dart';
 import 'package:<%= baseName %>/routes.dart';
 import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
@@ -15,7 +17,7 @@ class RegisterScreen extends StatelessWidget {
     final registerBloc = BlocProvider.of<RegisterBloc>(context);
     return Scaffold(
         appBar: AppBar(
-          title: Text(S.of(context).pageRegisterTitle),
+          title: Text(<%_ if (enableTranslation) { _%> Text(S.of(context).pageRegisterTitle) <%_ } else { _%> 'Register' <%_ } _%>),
         ),
         body: SingleChildScrollView(
           padding: const EdgeInsets.all(15.0),
@@ -71,7 +73,7 @@ class RegisterScreen extends StatelessWidget {
               keyboardType: TextInputType.text,
               decoration: InputDecoration(
                   border: OutlineInputBorder(),
-                  labelText: S.of(context).pageRegisterFormLogin,
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>,
                   errorText: snapshot.error));
         });
   }
@@ -85,8 +87,8 @@ class RegisterScreen extends StatelessWidget {
             keyboardType: TextInputType.emailAddress,
             decoration: InputDecoration(
                 border: OutlineInputBorder(),
-                labelText: S.of(context).pageRegisterFormEmail,
-                hintText: S.of(context).pageRegisterFormEmailHint,
+                labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormEmail <%_ } else { _%> 'Email' <%_ } _%>,
+                hintText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormEmailHint <%_ } else { _%> 'you@example.com' <%_ } _%>,
                 errorText: snapshot.error),
           );
         });
@@ -101,7 +103,7 @@ class RegisterScreen extends StatelessWidget {
               obscureText: true,
               decoration: InputDecoration(
                   border: OutlineInputBorder(),
-                  labelText: S.of(context).pageRegisterFormPassword,
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
                   errorText: snapshot.error));
         });
   }
@@ -115,7 +117,7 @@ class RegisterScreen extends StatelessWidget {
               obscureText: true,
               decoration: InputDecoration(
                   border: OutlineInputBorder(),
-                  labelText: S.of(context).pageRegisterFormConfirmPassword,
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormConfirmPassword <%_ } else { _%> 'Confirm password' <%_ } _%>,
                   errorText: snapshot.error));
         });
   }
@@ -140,15 +142,14 @@ class RegisterScreen extends StatelessWidget {
                   Padding(
                     padding: EdgeInsets.only(right: 5),
                   ),
-                  Text(S.of(context).pageRegisterFormTermsConditions),
+                  Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormTermsConditions <%_ } else { _%> 'I accept the terms of use' <%_ } _%>),
                 ],
               ),
               Visibility(
                 visible: snapshot.hasError,
                 child: Padding(
                   padding: const EdgeInsets.only(top: 10.0),
-                  child: Text(
-                    S.of(context).pageRegisterFormTermsConditionsNotChecked,
+                  child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormTermsConditionsNotChecked <%_ } else { _%> 'Please accept the terms and conditions' <%_ } _%>,
                     style: TextStyle(color: Colors.red),
                   ),
                 ),
@@ -176,11 +177,11 @@ class RegisterScreen extends StatelessWidget {
   String generateError(AsyncSnapshot<bool> snapshot, BuildContext context) {
     String errorTranslated = '';
     if(snapshot.error.toString().compareTo(RegisterBloc.passwordNotIdenticalKey) == 0){
-      errorTranslated = S.of(context).pageRegisterErrorPasswordNotIdentical;
+      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorPasswordNotIdentical <%_ } else { _%> 'The passwords are not identical' <%_ } _%>;
     } else if(snapshot.error.toString().compareTo(RegisterBloc.emailExistKey) == 0) {
-      errorTranslated = S.of(context).pageRegisterErrorMailExist;
+      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorMailExist <%_ } else { _%> 'Email already exist' <%_ } _%>;
     } else if (snapshot.error.toString().compareTo(RegisterBloc.loginExistKey) == 0){
-      errorTranslated = S.of(context).pageRegisterErrorLoginExist;
+      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorLoginExist <%_ } else { _%> 'Login already taken' <%_ } _%>;
     }
 
     return errorTranslated;
@@ -202,8 +203,7 @@ class RegisterScreen extends StatelessWidget {
                         child: Visibility(
                           replacement: CircularProgressIndicator(value: null),
                           visible: snapshotLoading.hasData && !snapshotLoading.data,
-                          child: Text(
-                            S.of(context).pageRegisterFormSubmit.toUpperCase(),
+                          child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormSubmit.toUpperCase() <%_ } else { _%> 'Sign up' <%_ } _%>,
                             style: TextStyle(fontSize: 15),
                           ),
                         ),
@@ -228,17 +228,17 @@ class RegisterScreen extends StatelessWidget {
                     Icons.check_circle,
                     color: Colors.indigoAccent,
                     size: 125.0,
-                    semanticLabel: S.of(context).pageRegisterSuccessAltImg,
+                    semanticLabel: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterSuccessAltImg <%_ } else { _%> 'Register success' <%_ } _%>,
                   ),
                   Padding(
                     padding: EdgeInsets.only(top: 10),
                   ),
-                  Text(S.of(context).pageRegisterSuccess.toUpperCase(),
+                  Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterSuccess.toUpperCase() <%_ } else { _%> 'Congratulation'.toUpperCase() <%_ } _%>,
                       style: TextStyle(fontSize: 30, color: Colors.indigoAccent)),
                   Padding(
                     padding: EdgeInsets.only(top: 10),
                   ),
-                  Text(S.of(context).pageRegisterSuccessSub),
+                  Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterSuccessSub <%_ } else { _%> 'You have successfuly registered' <%_ } _%>),
                   Padding(
                     padding: EdgeInsets.only(top: 30),
                   ),
@@ -247,7 +247,7 @@ class RegisterScreen extends StatelessWidget {
                     child: Container(
                         width: MediaQuery.of(context).size.width * 0.3,
                         child: Center(
-                            child: Text(S.of(context).pageRegisterFormLogin))),
+                            child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>))),
                     onPressed: () =>
                         Navigator.pushNamed(context, <%= baseName %>Routes.login),
                   )
