--- a/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
@@ -1,4 +1,4 @@
-class <%= baseName %>Routes {
+class <%= camelizedUpperFirstBaseName %>Routes {
   static final login = '/';
   static final register = '/register';
   static final main = '/main';
