--- a/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
@@ -1,6 +1,6 @@
 import 'package:flutter/widgets.dart';
 
-class <%= baseName %>Keys {
+class <%= camelizedUpperFirstBaseName %>Keys {
   static const loginScreen = Key('__loginScreen__');
   static const registerScreen = Key('__registerScreen__');
   static const mainScreen = Key('__mainScreen__');
